layout bug fixes

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -57,6 +57,7 @@
       align-items: center;
       justify-content: center;
       position: relative;
+      flex: 1;
 
       .search-container {
         align-self: flex-start;
